Fixed async sequence in categories table

--- a/index.html
+++ b/index.html
@@ -17,15 +17,19 @@
         <form action="/get_categories" id="form" method="POST">
             <div class="title">Get Categories Form</div>
             <div>
-                <label for="data_field">hidden data goes here</label>
+                <label for="data_field">categories hidden data goes here</label>
                 <input type="text"
-                name="transfer_data"
-                id="transfer_data"
-                placeholder="data_goes_here"
-                >
-                
+                name="categories_data"
+                id="categories_data"
+                placeholder="data_goes_here">        
             </div>
-            <div></div>
+            <div>
+                <label for="data_field">categories_to_workouts hidden data goes here</label>
+                <input type="text" 
+                name="categories_to_workouts_data" 
+                id="categories_to_workouts_data" 
+                placeholder="categories_to_workouts_data_goes_here">
+            </div>
             <div></div>
             <button id="btn" type="submit">Submit</button>
             
