--- a/index.html
+++ b/index.html
@@ -60,12 +60,6 @@
     <!-- paused at 7:08:47 -->
     <!-- // end: from Free Code Camp Course 7:07:15 https://www.youtube.com/watch?v=Oe421EPjeBE -->
 
-
-    <li class="workout">
-        <span class="data"> <a href="https://ma.manflowyoga.com/library-item/haka-circles/" class="link">Haka
-                Circles</a> </span><span class="workout-log-date-separator-before">-</span>
-        <span class="dates">5/4/21, 5/23/21, 7/6/2021</span>
-    </li>
     <div class="TODO">
         <p>Write new log file</p>
         <p>javascript to search for duplicates</p>
@@ -73,6 +67,7 @@
         <p>Add number of times work out performed</p>
         <p>Allow TODO in date field </p>
         <p>create package.json file</p>
+        <p>Strip Carriage returns from workout name</p>
     </div>
     <div class="input_workout">
         <form action="/submit" method="get">
@@ -97,12 +92,12 @@
     <details closed>
         <summary>Ankles and Balance</summary>
         <ul class="workouts">
-
             <li class="workout">
                 <span class="data"> <a href='https://manflowyoga.tv/programs/mfyl-ankle-stability-strength-balance'
                         target="_blank" rel="noopener noreferrer" class="link"><strong>Ankle Stability, Strength,
                             Balance</strong></a> </span><span class="workout-log-date-separator-before">-</span>
                 <span class="dates">8/16/21, 1/24/21, 11/20/20, 10/28/20, 9/29/20, 9/2/20, 8/20/20, 7/22/20</span>
+                <span class="comment">comment inserted for testing purpose</span>
                 </span>
             </li>
 
