--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
                 <span class="separator">-</span>
                 <span class="dates">8/1/2021, 7/15/2020, 7/27/2020, 8/29/2020, 9/17/2020, 10/8/2020, 11/15/2020,
                     1/3/2021, 1/11/2021, 4/8/2021</span>
+                <span class="comment">comment 2 inserted for testing purpose</span>
             </li>
 
             <li class="workout">
