--- a/index.html
+++ b/index.html
@@ -24,21 +24,16 @@
                 placeholder="data_goes_here">        
             </div>
             <button id="btn" type="submit">Submit</button>
-            
-        </form>
-
-        <form id="form"></form>
-
     </div>
     <p class="" id="JSONData"></p>
     <form action="/get_categories" method="GET">
         <h3>get categories</h3>
         <div class="form-row">
-          <label for="name"> enter name </label>
-          <input type="text" name="name" id="name" autocomplete="false" />
+        <label for="name"> enter name </label>
+        <input type="text" name="name" id="name" autocomplete="false" />
         </div>
         <button type="submit" class="block">submit</button>
-      </form>
+    </form>
     <!-- // start: from Free Code Camp Course 6:53 https://www.youtube.com/watch?v=Oe421EPjeBE -->
     <form action="/html_to_database" method="GET">
     <h3>Read in HTML File</h3>
@@ -668,7 +663,7 @@
 
                 < </li> <li class="workout">
                     <span class="data"> <a href="https://ma.manflowyoga.com/library-item/psoas-flexibility-strength/"
-                            class="link">HIP FLEXORS: Strengthen and Increase the Flexibility of Your Psoas</a>
+                            class="link">HIP FLEXORS: Strengthen and Increase the Flexibility of Your Poses</a>
                     </span><span class="workout-log-date-separator-before">-</span>
                     <span class="dates">May 12, 2021</span><span class="workout-log-date-separator-after"> -
                     </span>
