Moved retrieve_workout code to app.post
Note there is still occasional scheduling issue with workout_name

--- a/head_input.html
+++ b/head_input.html
@@ -57,6 +57,14 @@ body {
     </style>
 </head>
 <body>
- <h1>Add dates experiment</h1>  
+ <h1>Practice Line to show that the head has loaded</h1>  
+ <form action="/add_date.html" method="POST">
+  <h3>Traditional Form</h3>
+  <div class="form-row">
+    <label for="name"> workout </label>
+    <input type="text" name="name" id="name" autocomplete="false" />
+  </div>
+  <button type="submit" class="block">submit</button>
+</form> 
 </body>
 </html>
