Timing works for adding to workout; need to add categories with checks

--- a/head_input.html
+++ b/head_input.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>date_exp</title>
+    <title>practice</title>
     <style>
 body {
     background-color: lightgray;
@@ -58,13 +58,13 @@ body {
 </head>
 <body>
  <h1>Practice Line to show that the head has loaded</h1>  
- <form action="/add_date.html" method="POST">
+ <!-- <form action="/add_date.html" method="POST">
   <h3>Traditional Form</h3>
   <div class="form-row">
     <label for="name"> workout </label>
     <input type="text" name="name" id="name" autocomplete="false" />
   </div>
   <button type="submit" class="block">submit</button>
-</form> 
+</form>  -->
 </body>
 </html>
