Added Edit Workout Capability
Need to add last date

--- a/head_input.html
+++ b/head_input.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>practice</title>
+    <title>Yoga Log</title>
     <style>
 body {
     background-color: lightgray;
@@ -57,7 +57,7 @@ body {
     </style>
 </head>
 <body>
- <h1>Practice Line to show that the head has loaded</h1>  
+ <h1>Steve's Yoga Log</h1>  
  <!-- <form action="/add_date.html" method="POST">
   <h3>Traditional Form</h3>
   <div class="form-row">
