Put form button on same line as the workout

--- a/head_input.html
+++ b/head_input.html
@@ -1,70 +1,77 @@
 <!DOCTYPE html>
-<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-<html>
-
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yoga Log</title>
     <style>
-body {
-    background-color: lightgray;
-    font-family: Arial;
-  }
-  
-  h1, h2, summary, h1 + h5, h2 + h5, summary + h5, h6 {
-    text-align: center;
-  }
-  
-  h2, summary {
-    font-size: 1.5em;
-    font-weight: bold;
-  }
-  
-  summary {
-    text-align: left;
-    transition: 0.4s;
-  }
-  
-  ul {
-    list-style-type: none;
-    padding-left: 0;
-  }
-  
-  a:link {
-    color: blue;
-  }
-  
-  a:visited {
-    color: blue;
-  }
-  
-  a:hover {
-    color: green;
-  }
-  
-  a:active {
-    color: yellow;
-  }
-  
-  /* Style the buttons that are used to open and close the accordion panel */
-  .TODO {
-    color: red;
-  }
-  
-  /*# sourceMappingURL=Training_log.css.map */
-  
+      .flex-container {
+        display: flex;
+        flex-wrap: wrap;
+        align-items: left;
+        margin-top: .5em;
+
+      }
+
+      .flex-container>div {
+        margin-right: .5em;
+      }
+
+      body {
+        background-color: lightgray;
+        font-family: Arial;
+      }
+
+      h1,
+      h2,
+      summary,
+      h1+h5,
+      h2+h5,
+      summary+h5,
+      h6 {
+        text-align: center;
+      }
+
+      h2,
+      summary {
+        font-size: 1.5em;
+        font-weight: bold;
+      }
+
+      summary {
+        text-align: left;
+        transition: 0.4s;
+      }
+
+      ul {
+        list-style-type: none;
+        padding-left: 0;
+      }
+
+      a:link {
+        color: blue;
+      }
+
+      a:visited {
+        color: blue;
+      }
+
+      a:hover {
+        color: green;
+      }
+
+      a:active {
+        color: yellow;
+      }
+
+      /* Style the buttons that are used to open and close the accordion panel */
+      .TODO {
+        color: red;
+      }
+      /*# sourceMappingURL=Training_log.css.map */
     </style>
 </head>
 <body>
- <h1>Steve's Yoga Log</h1>  
- <!-- <form action="/add_date.html" method="POST">
-  <h3>Traditional Form</h3>
-  <div class="form-row">
-    <label for="name"> workout </label>
-    <input type="text" name="name" id="name" autocomplete="false" />
-  </div>
-  <button type="submit" class="block">submit</button>
-</form>  -->
+ <h1>Steve's Yoga Log</h1> 
 </body>
 </html>
